--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
   "config": {
     "packageName": "Honoka",
     "projectStartYear": "2015",
-    "licenseUrl": "https://github.com/windyakin/Honoka/blob/master/LICENSE"
+    "licenseUrl": "https://github.com/windyakin/Honoka/blob/master/LICENSE",
+    "exportFiles": {
+      "jquery": [
+        "dist/jquery.min.js"
+      ],
+      "popper.js": [
+        "dist/umd/popper.min.js"
+      ]
+    }
   },
   "keywords": [
     "css",
@@ -47,6 +55,7 @@
     "gulp-load-plugins": "^1.5.0",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
+    "gulp-regex-rename": "^0.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
